# thesis_polymechanon_vision

./: .gitignore  README.md  configuration_file.cfg
detection_utilities/: CMakeLists.txt  package.xml
label_detector/: CMakeLists.txt  CMakeLists.txt~  package.xml
label_detector/config/: config_PP.h.in
label_detector/config/hazardous_labels_images/: labels.yaml  labels_names.xml  labels_names.yaml
label_detector/diafora/: FSM.cpp
label_detector/dyn_cfg/: LabelDetector.cfg
label_detector/include/label_detector/: TEST_c_label_detector_nodehandler.h  c_label.h  c_label_detector.h  c_label_detector_nodehandler.h  c_locator.h  c_scanner.h  config_PP.h  detector_settings.h
label_detector/include/label_detector/scanners/: c_hzl_scanner (copy).h  c_hzl_scanner.h  c_qr_scanner.h
label_detector/launch/: run_label_detector_node.launch
label_detector/src/: TEST_c_label_detector_nodehandler.cpp  c_label.cpp  c_label_detector.cpp  c_label_detector_nodehandler.cpp  c_locator.cpp  c_scanner.cpp  label_detector_main.cpp  label_detector_node.cpp
label_detector/src/scanners/: c_hzl_scanner (copy).cpp  c_hzl_scanner.cpp  c_qr_scanner.cpp
label_detector/test/: test_something.cpp
label_detector/test/samples/videos/: record0  record1
polymechanon_vision_msgs/: CMakeLists.txt  package.xml
res_rob_vision/: CMakeLists.txt  package.xml
res_rob_vision/cfg/: AreaBorders.cfg  CircleDetection.cfg
res_rob_vision/config/: area_colors.yml  camera_calibration.yml
res_rob_vision/include/res_rob_vision/: c_borders_detection_hough.h  c_circle_detection.h  config_PP.h  freqfunctions.hpp
res_rob_vision/launch/: camera_node.launch  run_all.launch
res_rob_vision/msg/: Qr_Hz_msgs.msg
res_rob_vision/src/: area_borders_node.cpp  c_borders_detection_hough.cpp  c_circle_detection_hough.cpp  camera_publisher.cpp  circle_detection_node.cpp  configure_area_colors.cpp
test_package/: package.xml
victim_detector/: CMakeLists.txt  package.xml
victim_detector/dyn_cfg/: MotionDetector.cfg  ObjectDetector.cfg  ThermalDetector.cfg
victim_detector/include/victim_detector/: c_motion_detector.h  c_object_detector.h  c_thermal_detector.h  config_PP.h
victim_detector/launch/: run_label_detector_node.launch
victim_detector/src/: c_motion_detector.cpp  c_object_detector.cpp  c_thermal_detector.cpp  motion_detector_node.cpp  object_detector_node.cpp  thermal_detector_node.cpp
